# InsureYours

./: .dockerignore  .env.example  .gitignore  Analysis.sql  CLAUDE.md  CONTRIBUTING.md  Dockerfile  HealthCare_Final_Project.pbix  HealthCare_Project_604.pptx  Makefile  README.md  StoredProcedure.sql  Tables_Creation.sql  api.py  data_profiler.py  docker-compose.yml  etl_load.py  healthcare_dataset.csv  pyproject.toml  requirements.txt  run_pipeline.sh  statistical_analysis.py
.github/workflows/: ci.yml
ETL/: HealthCare.dtsx  Healthcare_Data.conmgr  Healthcare_GroupProject.database  Healthcare_GroupProject.dtproj  Healthcare_GroupProject.sln
dashboard/: index.html
docker/: Dockerfile  run_analysis.sh
notebooks/: exploratory_analysis.ipynb
sql/: 02_procedures.sql  03_analysis.sql  04_advanced.sql
src/insureyours/: __init__.py  api.py  etl_load.py
tests/: test_api.py  test_etl.py
